# caldavframework

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: django.yml  docker.yml
caldav_framework/: authentication.py  base.py  dispatcher.py  driver.py  mixins.py  models.py  parsers.py  response.py  signals.py  views.py
caldav_framework/example/: admin.py  apps.py  caldav.py  convert.py  fields.py  mixins.py  models.py  signals.py  urls.py  views.py
caldav_framework/example/migrations/: 0001_initial.py  0002_calendar_public.py  0003_alter_calendar_color.py  0004_alter_calendar_color.py  0005_apievent.py  0006_event_description.py
caldav_framework/example/templates/: base.html  home.html  navbar.inc.html
caldav_framework/example/templates/example/: calendar_detail.html  calendar_form.html  calendar_list.html  calendar_public.html  event_detail.html  event_form.html  event_public.html
caldav_framework/example/templates/registration/: login.html
caldav_framework/migrations/: 0001_initial.py
caldav_framework/standalone/: __init__.py  settings.py  urls.py  wsgi.py
caldav_framework/tests/: PUT.ics  discovery.xml
docker/: docker-entrypoint.sh  docker.env  requirements.in  requirements.txt
todo/: __init__.py  admin.py  authentication.py  base.py  caldav.py  manage.py  models.py  parsers.py  response.py  settings.py  signals.py  urls.py  views.py  wsgi.py
todo/core/: __init__.py  admin.py  apps.py  context_processor.py  models.py  rest.py  serializers.py  signals.py  views.py
todo/core/management/commands/: caldav-github.py  caldav-jira.py  dump-local.py  sync-github.py  sync-jira.py
todo/core/migrations/: 0001_initial.py  0002_search.py  0003_project_search_createdOn.py
todo/core/templates/: about.html  base.html  navbar.inc.html
todo/core/templates/core/: task_detail.html  task_list.html
todo/core/templates/registration/: login.html
todo/core/templatetags/: todo.py
todo/fixtures/: testcase.json
todo/migrations/: 0001_initial.py
todo/standalone/: __init__.py  asgi.py  manage.py  settings.py  urls.py
todo/tests/: __init__.py  principal.xml  test_caldav.py
