[metadata]
name = CalDavFramework
version = attr: todo.version.__version__
license = MIT License
description = A Django framework for building caldav servers
url = https://github.com/kfdm/caldavframework
author = Paul Traylor
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
install_requires =
    defusedxml
    Django>=3.0
    djangorestframework
    icalendar
    python-dateutil
    pytz

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    todo-server = todo.standalone.manage:main

[options.extras_require]
standalone =
    django-environ
    prometheus-client
    sentry_sdk
dev =
    black
    codecov
    django-nose
    flake8
    nose-cov
    psycopg2-binary
    unittest-xml-reporting

[isort]
forced_separate = django,todo
known_django = django
known_first_party = todo
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[nosetests]
cover-html = 1
cover-html-dir = dist/cover
cover-package = todo
with-coverage = 1

[flake8]
ignore = E501
