[metadata]
name = CalDavFramework
version = attr: caldav_framework.version.__version__
license = MIT License
description = A Django framework for building caldav servers
url = https://github.com/kfdm/caldavframework
author = Paul Traylor
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
install_requires =
    defusedxml
    Django>=3.0
    djangorestframework
    icalendar
    python-dateutil
    pytz

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    todo-server = caldav_framework.standalone.manage:main[standalone]

[options.extras_require]
standalone =
    django-environ
    prometheus-client
    sentry_sdk
dev =
    black
    flake8
    psycopg2-binary

[isort]
forced_separate = django,caldav_framework
known_django = django
known_first_party = caldav_framework
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
ignore = E501
